# aiogram-mock

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  test-package.yml
examples/: test_basic.py
src/aiogram_mock/: facade_factory.py  mocked_session.py  tg_control.py  tg_state.py
